# catalog

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt  run.py  setup.py
catalog/: __init__.py  cli.py  embed.py  library.py  media.py  process.py  speech.py  utils.py  workflow.py
core/: datastore.py  orchestrator.py  process.py  transcribe.py
dev/: embeddings.qmd  markdown.qmd  transcribe.qmd  workflow.qmd
dev/icloud/: connect.qmd  copy.qmd  ingest.qmd
tests/: test_conversion.py  test_markdown.py  test_processor.py
transcribe/: __init__.py  format.py  transcribe.py
utils/: conversion.py  export.py  file_handling.py  file_utils.py  import.py  ingest.py  logging.py  orchestrator.py
